# dotfiles

./: .ctagsrc  .default-python-packages  .gitconfig  .gitconfig_priv  .gitignore  .p10k.zsh  .tmux.conf  .vimrc  .zshrc  Brewfile  LICENSE  Makefile  README.md  brew.txt  install  install.sh  pyproject.toml  vimrc  zshrc
.config/alacritty/: alacritty.yml
.config/neofetch/: config.conf
.pyenv/: default-packages
alacritty/: alacritty.yml
alacritty/.config/alacritty/: alacritty.yml
amethyst/: .amethyst.yml
ansible/: config.yml  playbook.yml
ansible/scripts/: osx_settings.sh
ansible/tasks/: asdf.yml  dotfiles.yml  homebrew.yml  osx.yml  terminal.yml  tmux.yml
asdf-default-packages/: .default-gems  .default-golang-pkgs  .default-npm-packages  .default-python-packages
gitconfig/: .gitconfig  .gitconfig_tmp  .gitignore_global
nvim/: coc-settings.json  functions.vim  init.vim  keybinds.vim  plug.vim  sets.vim
nvim/.config/nvim/: init.lua  init.old.vim  init.vim  keybinds.vim  lazy-lock.json  sets.vim
nvim/lua/: default-config.lua  nvimTree.lua  pluginList.lua  telescope-nvim.lua  treesitter.lua
nvim/lua/core/: nvimtree.lua  packerInit.lua  (+1 more)
nvim/plugin/: ale.vim  auto.vim  coc.vim  folding.vim  gutentags.vim  lightline.vim  tagbar.vim  vim-go.vim  visual-multi.vim
nvim/plugin-orig/: gitblame.vim  gutentags.vim  lightline.vim  neoterm.vim  vim-terraform.vim  visual-multi.vim
tflint/: .tflint.hcl
tmux/: .tmux.conf  my-theme.tmux
tmux/scripts/: cpu.sh  cpu_collect.sh
zsh/: .zshrc
zsh/config/: completion.zsh  exports.zsh  options.zsh
(+69 files in other folders)
